fixed mobile menu pushing off screen

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Couples Collective
-Version: 0.91
+Version: 0.92
 Description: Updated site for the Bay Area Couples Collective
 Tags: private, static
 Author: Angel Damion Robles and CJ Garcia
@@ -1448,6 +1448,11 @@ body {
     #navigation {
         & .header-flex {
             padding: var(--mobile-padding);
+            column-gap: 0;
+        }
+
+        & .title {
+            white-space: normal;
         }
     }
 
